--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
         <div class="content">
             <div class="TrabajoBx">
                 <img src="Texto.png" alt="img">   
-                <h2>Retos</h2> 
+                <h2><a href="https://lauraalejanbogota.github.io/50dias50restos/" target="_blank">Retos</a></h2> 
                 <p>Pagina donde podemos ver nuestro texto con una secuencia.</p>
             </div>
             <div class="TrabajoBx">
-                <img src="Adivinar.png" alt="img">   
-                <h2> adivinar </h2> 
-                <p> Pagina web de juegos, donde podremos adivinar que animal nos gusta. </p>
+                <img src="tetris.png" alt="img">   
+                <h2><a href="https://mafetoro92.github.io/Tetris/" target="_blank">Tetris</a></h2> 
+                <p> Pagina web de juegos, donde podremos disfrutar el juego de tetris. </p>
             </div>
             <div class="TrabajoBx">
                 <img src="bibliografia.png" alt="img">   
-                <h2> bibliografia</h2> 
+                <h2><a href="https://lauraalejanbogota.github.io/bibliografia/" target="_blank">bibliografia</a></h2> 
                 <p> Pagina web de biografias, columnas de opinion, y recomendaciones artisiticas. </p>
             </div>
         </div>  
@@ -101,7 +101,7 @@
                     </div>
                     <div class="box">
                         <div class="text">
-                            <p>301-239-1203</p>
+                            <p>319-742-3756</p>
                             <h3>Telefono</h3>
                         </div>
                     </div>
@@ -114,11 +114,11 @@
                 </div>
             </div>
             <div class="formBx">
-              <form>
+              <form action="https://formsubmit.co/lauralejab96@gmail.com" method="POST">
                 <h3>Tu  Mensaje</h3>
-                <input type="text" name="" placeholder="Nombre Completo">
-                <input type="email" name="" placeholder="Email">
-                <textarea placeholder="Tu Mensaje"></textarea>
+                <input type="text" name="name" placeholder="Nombre Completo">
+                <input type="email" name="email" placeholder="Email">
+                <textarea name="comments" placeholder="Tu Mensaje"></textarea>
                 <input type="submit" value="Enviar">
               </form>
             </div>
