--- a/index.html
+++ b/index.html
@@ -50,7 +50,21 @@
         <div class="heading black">
             <h2>Trabajo</h2>
         </div>
+
         <div class="content">
+            <div class="TrabajoBx">
+                <img src="Adivinar.png" alt="img">   
+                <h2><a href="https://lauraalejanbogota.github.io/Adivinar/" target="_blank">Adivinar</a></h2> 
+                <p> Adivinar animales y sale respuesta en consola  </p>
+            </div>
+
+        <div class="content">
+            <div class="TrabajoBx">
+                <img src="bibliografia.png" alt="img">   
+                <h2><a href="https://lauraalejanbogota.github.io/bibliografia/" target="_blank">bibliografia</a></h2> 
+                <p> Pagina web de biografias, columnas de opinion, y recomendaciones artisiticas. </p>
+            </div>
+
             <div class="TrabajoBx">
                 <img src="Texto.png" alt="img">   
                 <h2><a href="https://lauraalejanbogota.github.io/50dias50restos/" target="_blank">Retos</a></h2> 
@@ -62,10 +76,30 @@
                 <p> Pagina web de juegos, donde podremos disfrutar el juego de tetris. </p>
             </div>
             <div class="TrabajoBx">
-                <img src="bibliografia.png" alt="img">   
-                <h2><a href="https://lauraalejanbogota.github.io/bibliografia/" target="_blank">bibliografia</a></h2> 
-                <p> Pagina web de biografias, columnas de opinion, y recomendaciones artisiticas. </p>
+                <img src="piedra1.png" alt="img">   
+                <h2><a href="https://lauraalejanbogota.github.io/Piedra-Papel-Tigera/" target="_blank">Piedra-Papel-Tigera</a></h2> 
+                <p> Pagina de juegos , donde se juego Piedra-Papel-Tigera </p>
             </div>
+
+            <div class="TrabajoBx">
+                <img src="angula2.png" alt="img">   
+                <h2><a href="https://daferrom.github.io/db_movies/client/movies/add" target="_blank">Video Club</a></h2> 
+                <p> interfaz donde puedes leer, crear, modificar y eliminar películas </p>
+            </div>
+
+            <div class="TrabajoBx">
+                <img src="react.png" alt="img">   
+                <h2><a href="https://javieredoher.github.io/mercaTodo_front/" target="_blank">Mercatodo</a></h2> 
+                <p> Sistema básico para manejar inventario  </p>
+            </div>
+
+            
+
+
+
+
+
+
         </div>  
     </section>
     <!--Seccion Testimonios-->
