--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#" class= "logo">Portafolio</a>
         <div class="toggle" onclick="toggleMenu();"></div> 
         <ul class="menu">
-           <li><a href="#inicio"onclick="toggleMenu();">Inico</a></li>
+           <li><a href="#inicio"onclick="toggleMenu();">Inicio</a></li>
            <li><a href="#sobremi"onclick="toggleMenu();">Sobre mi</a></li>
            <li><a href="#trabajo"onclick="toggleMenu();">Trabajo</a></li>
            <li><a href="#testimonios"onclick="toggleMenu();">Testimonio</a></li>
