--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!--Seccion principal-->
     <section class="banner" id="inicio">
         <div class="textBx">
-            <h2> Hola,soy<br><span>Laura Bogota</span></h2>
+            <h2> Hola, soy<br><span>Laura Bogota</span></h2>
             <h3> Soy estudiante de diseño web </h3>
             <a href="#sobremi" class="btn">Leer mas</a>             
         </div>
@@ -40,7 +40,7 @@
         <div class="content">
             <div class="contentBx ancho50">
                 <h3>Soy estudiante de diseño web.</h3>
-                <p><br> Tengo un técnico en logística empresarial con experiencias en varias empresas en el area logistico <br><br>Desde hace unos meses soy estudiante de diseño web, por parte de programate<br><br>Con ellos e logrado obtener competencias en html, css y java script.</p>
+                <p><br>Tengo un técnico en logística empresarial con experiencias en varias empresas en el área logístico.<br><br>Desde hace unos meses soy estudiante de diseño web, por parte de programate.<br><br>Con ellos he logrado obtener competencias en HTML, CSS y Java Script.</p>
             </div>
             <div class="ancho50">
               <img src="lau1.jpeg" class="img">  
@@ -57,53 +57,46 @@
             <div class="TrabajoBx">
                 <img src="Adivinar.png" alt="img">   
                 <h2><a href="https://lauraalejanbogota.github.io/Adivinar/" target="_blank">Adivinar</a></h2> 
-                <p> Adivinar animales y sale respuesta en consola  </p>
+                <p>Adivinar animales y sale respuesta en consola  </p>
             </div>
 
         <div class="content">
             <div class="TrabajoBx">
                 <img src="bibliografia.png" alt="img">   
-                <h2><a href="https://lauraalejanbogota.github.io/bibliografia/" target="_blank">bibliografia</a></h2> 
-                <p> Pagina web de biografias, columnas de opinion, y recomendaciones artisiticas. </p>
+                <h2><a href="https://lauraalejanbogota.github.io/bibliografia/" target="_blank">Bibliografía</a></h2> 
+                <p>Página web de biografías, columnas de opinión, y recomendaciones artísticas. </p>
             </div>
 
             <div class="TrabajoBx">
                 <img src="Texto.png" alt="img">   
                 <h2><a href="https://lauraalejanbogota.github.io/50dias50restos/" target="_blank">Retos</a></h2> 
-                <p>Pagina donde podemos ver nuestro texto con una secuencia.</p>
+                <p>Página  donde podemos ver nuestro texto con una secuencia.</p>
             </div>
             <div class="TrabajoBx">
                 <img src="tetris.png" alt="img">   
                 <h2><a href="https://mafetoro92.github.io/Tetris/" target="_blank">Tetris</a></h2> 
-                <p> Pagina web de juegos, donde podremos disfrutar el juego de tetris. </p>
+                <p>Página  web de juegos, donde podremos disfrutar el juego de tetris. </p>
             </div>
             <div class="TrabajoBx">
                 <img src="piedra1.png" alt="img">   
                 <h2><a href="https://lauraalejanbogota.github.io/Piedra-Papel-Tigera/" target="_blank">Piedra-Papel-Tigera</a></h2> 
-                <p> Pagina de juegos , donde se juego Piedra-Papel-Tigera </p>
+                <p>Página  de juegos, donde se juego Piedra-Papel-Tijera. </p>
             </div>
 
             <div class="TrabajoBx">
                 <img src="angula2.png" alt="img">   
                 <h2><a href="https://daferrom.github.io/db_movies/client/movies/add" target="_blank">Video Club</a></h2> 
-                <p> interfaz donde puedes leer, crear, modificar y eliminar películas </p>
+                <p>Interfaz donde puedes leer, crear, modificar y eliminar películas </p>
             </div>
 
             <div class="TrabajoBx">
                 <img src="react.png" alt="img">   
                 <h2><a href="https://javieredoher.github.io/mercaTodo_front/" target="_blank">Mercatodo</a></h2> 
-                <p> Sistema básico para manejar inventario  </p>
+                <p>Sistema básico para manejar inventario  </p>
             </div>
-
-            
-
-
-
-
-
-
         </div>  
     </section>
+
     <!--Seccion Testimonios-->
     <section class="Testimonios" id="testimonios">
         <div class="heading">
@@ -123,7 +116,7 @@
     <!--Seccion Contacto-->
     <section class="contact" id="contacto">
         <div class="heading black">
-            <h2>Contactanos</h2>
+            <h2>Contactame</h2>
         </div>
         <div class="content">
             <div class="contactInfo">
